kubernetes/services/forgejo/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: forgejo
  annotations:
    argocd.argoproj.io/sync-wave: "-20"
    argocd.argoproj.io/sync-options: Prune=confirm,Delete=confirm
